# ferveo

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  default.conf  rustfmt.toml
.github/workflows/: book.yml  build.yaml  latex.yml  manual.yaml  manual.yml
benches/: bench_main.rs  benchmarks.rs  bls.rs  kzg.rs  pairing.rs
benches/benchmarks/: block_proposer.rs  mod.rs  pairing.rs  pvdkg.rs
book/: book.toml
book/src/: SUMMARY.md  aggregation.md  alternative.md  assumptions.md  dkg.md  dkginit.md  enclave.md  fastkzg.md  keyrefresh.md  lagrange.md  overview.md  pedersen.md  performance.md  prefix.md  preliminaries.md  primitives.md  pvss.md  sca.md  tpke-concrete.md  tpke-kzg-dkg.md  tpke.md  tss.md  tx.md
docs/: ferveo.tex.md
examples/: noserialize.rs  pvdkg.rs
ferveo/: Cargo.toml
ferveo-common/: Cargo.toml
ferveo-common/src/: keypair.rs  lib.rs
ferveo/benches/: bench_main.rs
ferveo/benches/benchmarks/: pairing.rs  pvdkg.rs
ferveo/examples/: noserialize.rs  pvdkg.rs
ferveo/src/: dkg.rs  lib.rs  msg.rs  primitives.rs  vss.rs
ferveo/src/dkg/: common.rs  pv.rs
ferveo/src/primitives/: keypair.rs  subproductdomain.rs
ferveo/src/vss/: pvss.rs
src/: bdfg20.rs  bls.rs  bls12_381.rs  config.rs  dkg.rs  dkg_behaviour.rs  ec_fft.rs  fastkzg.rs  fastpoly.rs  fft.rs  hash_to_curve.rs  hash_to_field.rs  hybriddkg.rs  hybriddkg2.rs  hybridvss.rs  hybridvss_rec.rs  hybridvss_sh.rs  lib.rs  main.rs  msg.rs  poly.rs  primitives.rs  rand_beacon.rs  subproductdomain.rs  syncvss.rs  tpke.rs  vss.rs
src/dkg/: common.rs  context.rs  participant.rs  pedersen.rs  pv.rs  pvss.rs
src/fastkzg/: bdfg20.rs
src/hybridvss/: mod.rs  params.rs  rec.rs  sh.rs
src/primitives/: batch_inverse.rs  keypair.rs  nizkp.rs  subproductdomain.rs
src/syncvss/: dh.rs  dispute.rs  mod.rs  nizkp.rs  params.rs  sh.rs
src/vss/: dh.rs  dispute.rs  feldman.rs  params.rs  pvss.rs  sh.rs
subproductdomain/: Cargo.toml
subproductdomain/benches/: benchmarks.rs
tests/: bls.rs  hybriddkg.rs  hybridvss.rs  hybridvss_sh.rs
tests copy/: bls.rs
tpke/: Cargo.toml
tpke/benches/: benchmarks.rs
tpke/src/: ciphertext.rs  combine.rs  context.rs  decryption.rs  hash_to_curve.rs  key_share.rs  lib.rs  subproductdomain.rs
