[workspace]

members = [
  "ferveo",
  "ferveo-common",
  "subproductdomain",
  "tpke",
]

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Optimizations are needed such that the tests run in a reasonable timeframe
[profile.test]
opt-level = 3
debug = true

[profile.release]
debug = true
lto = true
codegen-units = 1
