[package]
name = "ferveo-common"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
authors = ["Heliax AG <hello@heliax.dev>"]

[dependencies]
anyhow = "1.0.47"
ark-std = "0.3"
ark-ec = "0.3"
serde = { version = "1.0", features = ["derive"] }
ark-serialize = "0.3"
serde_bytes = "0.11" 

[dev-dependencies]
ark-bls12-381 = "0.3"
serde_json = "1.0"
bincode = "1.0"

[profile.release]
opt-level = 3
lto = true