[package]
name = "subproductdomain"
version = "0.1.0"
edition = "2018"
authors = ["Heliax AG <hello@heliax.dev>"]

[dependencies]
anyhow = "1.0.47"
ark-std = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
ark-poly = "0.3"

[dev-dependencies]
ark-bls12-381 = "0.3"

[profile.release]
opt-level = 3
lto = true