[package]
name = "group-threshold-cryptography"
version = "0.1.0"
edition = "2018"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "MIT OR Apache-2.0"
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/heliaxdev/group-threshold-crypto/"
readme = "README.md"

[dependencies]
hex = "=0.4.3"
rand_core = "0.6"
rand = "0.8"
rayon = "1.5"
thiserror = "=1.0.30"
anyhow = "=1.0"

blake2b_simd = "=1"
miracl_core = "=2.3.0"
chacha20 = "0.8.1"
ark-ff = "0.3"
ark-ec = "0.3"
ark-poly = "0.3"
ark-serialize = "0.3"
ark-std = "0.3"
ark-bls12-381 = "0.3"
itertools="0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

